[gd_scene load_steps=4 format=2]

[ext_resource path="res://Miss.gd" type="Script" id=1]
[ext_resource path="res://res/sprite/miss_head1.png" type="Texture" id=2]
[ext_resource path="res://res/sprite/miss_head2.png" type="Texture" id=3]

[node name="Miss" type="Node2D"]
scale = Vector2( 0.85, 0.85 )
script = ExtResource( 1 )

[node name="head1" type="Sprite" parent="."]
position = Vector2( 58, 18 )
texture = ExtResource( 2 )

[node name="head2" type="Sprite" parent="."]
position = Vector2( 131, 18 )
texture = ExtResource( 3 )

[node name="head3" type="Sprite" parent="."]
position = Vector2( 170, 18 )
texture = ExtResource( 3 )
